--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -7,7 +7,7 @@
         android:title="Search"
         android:icon="@drawable/ic_search"
         android:iconTint="@color/white"
-        app:showAsAction="ifRoom"
+        app:showAsAction= "collapseActionView|ifRoom"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
     <item android:id="@+id/menu_delete"
